delivery/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery
  labels:
    app: delivery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delivery
  template:
    metadata:
      labels:
        app: delivery
    spec:
      containers:
        - name: delivery
          image: skccacr.azurecr.io/delivery:latest
          ports:
            - containerPort: 8080
          #readinessProbe:
          #  httpGet:
          #    path: '/actuator/health'
          #    port: 8080
          #  initialDelaySeconds: 10
          #  timeoutSeconds: 2
          #  periodSeconds: 5
          #  failureThreshold: 10
          #livenessProbe:
          #  httpGet:
          #    path: '/actuator/health'
          #    port: 8080
          #  initialDelaySeconds: 120
          #  timeoutSeconds: 2
          #  periodSeconds: 5
          #  failureThreshold: 5
